--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <HorizontalScrollView
+        android:id="@+id/menu_game"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="12dp"
+                android:src="@drawable/ic_game" />
+
+
+            <ImageView
+                android:id="@+id/pubg_mobile"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/pubg_mobile"
+                android:background="@drawable/menu_game"
+                />
+
+            <ImageView
+                android:id="@+id/apex"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/apex" />
+
+            <ImageView
+                android:id="@+id/amongus"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/among" />
+
+            <ImageView
+                android:id="@+id/genshin"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/genshin" />
+
+            <ImageView
+                android:id="@+id/minecraft"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/mine" />
+
+            <ImageView
+                android:id="@+id/fortnight"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/fortnight" />
+
+            <ImageView
+                android:id="@+id/callofduty"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/callofduty" />
+        </LinearLayout>
+
+    </HorizontalScrollView>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:background="@color/purple_500"
+        android:layout_marginBottom="8dp"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
