--- a/app/src/main/res/layout/stream_item.xml
+++ b/app/src/main/res/layout/stream_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp"
-    android:background="@color/white">
+    android:orientation="vertical"
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -12,73 +11,110 @@
 
         <ImageView
             android:id="@+id/user_profile"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="12dp"
             android:src="@drawable/ic_user"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/username"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
             android:text="username"
-            android:textSize="25sp"
-            app:layout_constraintLeft_toRightOf="@+id/user_profile"
-            app:layout_constraintTop_toTopOf="@id/user_profile"
-            app:layout_constraintRight_toLeftOf="@+id/link_img"
+            android:textColor="@color/white"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@id/user_profile"
-            />
+            app:layout_constraintLeft_toRightOf="@+id/user_profile"
+            app:layout_constraintRight_toLeftOf="@+id/link_img"
+            app:layout_constraintTop_toTopOf="@id/user_profile" />
 
         <ImageView
             android:id="@+id/link_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_game"
-            app:layout_constraintTop_toTopOf="@id/user_profile"
+            app:layout_constraintBottom_toBottomOf="@id/user_profile"
             app:layout_constraintLeft_toRightOf="@+id/username"
             app:layout_constraintRight_toLeftOf="@+id/stream_link"
-            app:layout_constraintBottom_toBottomOf="@id/user_profile"
-            />
+            app:layout_constraintTop_toTopOf="@id/user_profile" />
 
         <TextView
             android:id="@+id/stream_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
             android:text="リンク"
-            app:layout_constraintTop_toTopOf="@id/user_profile"
-            app:layout_constraintLeft_toRightOf="@+id/link_img"
-            app:layout_constraintRight_toLeftOf="@+id/viewer"
+            android:textColor="@color/white"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@id/user_profile"
-            />
+            app:layout_constraintLeft_toRightOf="@+id/link_img"
+            app:layout_constraintRight_toLeftOf="@+id/view_img"
+            app:layout_constraintTop_toTopOf="@id/user_profile" />
+
+        <ImageView
+            android:id="@+id/view_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_eye"
+            app:layout_constraintBottom_toBottomOf="@id/user_profile"
+            app:layout_constraintLeft_toRightOf="@+id/stream_link"
+            app:layout_constraintRight_toLeftOf="@+id/viewer"
+            app:layout_constraintTop_toTopOf="@id/user_profile" />
 
         <TextView
             android:id="@+id/viewer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100"
-            android:textSize="25sp"
-            app:layout_constraintLeft_toRightOf="@+id/stream_link"
-            app:layout_constraintTop_toTopOf="@id/user_profile"
-            app:layout_constraintRight_toRightOf="parent"
+            android:textColor="@color/white"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/user_profile"
-            />
+            app:layout_constraintLeft_toRightOf="@+id/view_img"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/user_profile" />
 
         <ImageView
             android:id="@+id/thumbnail"
-            android:layout_width="300dp"
-            android:layout_height="170dp"
+            android:layout_width="280dp"
+            android:layout_height="160dp"
+            android:layout_marginBottom="8dp"
             android:src="@drawable/ic_launcher_background"
-            app:layout_constraintTop_toBottomOf="@+id/user_profile"
+            app:layout_constraintBottom_toTopOf="@+id/gamename"
             app:layout_constraintLeft_toRightOf="@id/user_profile"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/user_profile" />
 
+        <TextView
+            android:id="@+id/lang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="12dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/gamename"
+            app:layout_constraintTop_toTopOf="@+id/gamename" />
+
+        <TextView
+            android:id="@+id/gamename"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="@+id/viewer"
+            app:layout_constraintTop_toBottomOf="@+id/thumbnail" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@color/purple_500"
+        android:layout_marginTop="8dp"
+        />
+
+</LinearLayout>
