--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,90 +8,166 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:background="@color/purple_500" />
+
     <HorizontalScrollView
         android:id="@+id/menu_game"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp">
+        android:layout_marginBottom="6dp">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
-
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginHorizontal="8dp"
-                android:layout_marginBottom="4dp"
                 android:layout_marginTop="12dp"
+                android:layout_marginBottom="4dp"
                 android:src="@drawable/ic_game" />
 
 
-            <ImageView
-                android:id="@+id/pubg_mobile"
+            <androidx.cardview.widget.CardView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                app:cardCornerRadius="15dp"
                 android:layout_marginHorizontal="4dp"
-                android:layout_marginBottom="4dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/pubg_mobile"
-                android:background="@drawable/menu_game"
-                />
+                android:layout_marginBottom="4dp"
+                >
 
-            <ImageView
-                android:id="@+id/apex"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/apex" />
+                <ImageView
+                    android:id="@+id/pubg_mobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/pubg_mobile"
+                    />
+            </androidx.cardview.widget.CardView>
 
-            <ImageView
-                android:id="@+id/amongus"
+            <androidx.cardview.widget.CardView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                app:cardCornerRadius="15dp"
                 android:layout_marginHorizontal="4dp"
-                android:layout_marginBottom="4dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/among" />
+                android:layout_marginBottom="4dp"
+                >
 
-            <ImageView
-                android:id="@+id/genshin"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/genshin" />
+                <ImageView
+                    android:id="@+id/apex"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/apex"
+                    />
+            </androidx.cardview.widget.CardView>
 
-            <ImageView
-                android:id="@+id/minecraft"
+            <androidx.cardview.widget.CardView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                app:cardCornerRadius="15dp"
                 android:layout_marginHorizontal="4dp"
-                android:layout_marginBottom="4dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/mine" />
+                android:layout_marginBottom="4dp"
+                >
 
-            <ImageView
-                android:id="@+id/fortnight"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/fortnight" />
+                <ImageView
+                    android:id="@+id/amongus"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/among"
+                    />
+            </androidx.cardview.widget.CardView>
 
-            <ImageView
-                android:id="@+id/callofduty"
+            <androidx.cardview.widget.CardView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                app:cardCornerRadius="15dp"
                 android:layout_marginHorizontal="4dp"
-                android:layout_marginBottom="4dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/callofduty" />
+                android:layout_marginBottom="4dp"
+                >
+
+                <ImageView
+                    android:id="@+id/genshin"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/genshin"
+                    />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                app:cardCornerRadius="15dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                >
+
+                <ImageView
+                    android:id="@+id/minecraft"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/mine"
+                    />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                app:cardCornerRadius="15dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                >
+
+                <ImageView
+                    android:id="@+id/fortnight"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/fortnight"
+                    />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                app:cardCornerRadius="15dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                >
+
+                <ImageView
+                    android:id="@+id/callofduty"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/callofduty"
+                    />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                app:cardCornerRadius="15dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                >
+
+                <ImageView
+                    android:id="@+id/lol"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/lol"
+                    />
+            </androidx.cardview.widget.CardView>
+
         </LinearLayout>
 
     </HorizontalScrollView>
@@ -99,9 +175,8 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dp"
-        android:background="@color/purple_500"
         android:layout_marginBottom="8dp"
-        />
+        android:background="@color/purple_500" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
