--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dp"
-        android:background="@color/purple_500" />
+        android:background="@color/theme" />
 
     <HorizontalScrollView
         android:id="@+id/menu_game"
@@ -24,12 +24,13 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:id="@+id/game_icon"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="4dp"
-                android:src="@drawable/ic_game" />
+                android:src="@drawable/game_icon" />
 
 
             <androidx.cardview.widget.CardView
@@ -176,7 +177,7 @@
         android:layout_width="fill_parent"
         android:layout_height="2dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/purple_500" />
+        android:background="@color/theme" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
