--- a/app/src/main/res/layout/stream_item.xml
+++ b/app/src/main/res/layout/stream_item.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/ic_user"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -23,44 +23,20 @@
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:text="username"
+            android:layout_marginLeft="16dp"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="@id/user_profile"
             app:layout_constraintLeft_toRightOf="@+id/user_profile"
-            app:layout_constraintRight_toLeftOf="@+id/link_img"
-            app:layout_constraintTop_toTopOf="@id/user_profile" />
-
-        <ImageView
-            android:id="@+id/link_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_game"
-            app:layout_constraintBottom_toBottomOf="@id/user_profile"
-            app:layout_constraintLeft_toRightOf="@+id/username"
-            app:layout_constraintRight_toLeftOf="@+id/stream_link"
-            app:layout_constraintTop_toTopOf="@id/user_profile" />
-
-        <TextView
-            android:id="@+id/stream_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="リンク"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="@id/user_profile"
-            app:layout_constraintLeft_toRightOf="@+id/link_img"
-            app:layout_constraintRight_toLeftOf="@+id/view_img"
             app:layout_constraintTop_toTopOf="@id/user_profile" />
 
         <ImageView
             android:id="@+id/view_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
             android:src="@drawable/ic_eye"
             app:layout_constraintBottom_toBottomOf="@id/user_profile"
-            app:layout_constraintLeft_toRightOf="@+id/stream_link"
             app:layout_constraintRight_toLeftOf="@+id/viewer"
             app:layout_constraintTop_toTopOf="@id/user_profile" />
 
@@ -68,35 +44,67 @@
             android:id="@+id/viewer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="12dp"
             android:text="100"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/user_profile"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/view_img"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@id/user_profile" />
 
-        <ImageView
-            android:id="@+id/thumbnail"
+        <androidx.cardview.widget.CardView
             android:layout_width="280dp"
             android:layout_height="160dp"
             android:layout_marginBottom="8dp"
-            android:src="@drawable/ic_launcher_background"
+            android:layout_marginTop="8dp"
+            app:cardCornerRadius="5dp"
             app:layout_constraintBottom_toTopOf="@+id/gamename"
             app:layout_constraintLeft_toRightOf="@id/user_profile"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/user_profile" />
+            app:layout_constraintTop_toBottomOf="@+id/user_profile">
+
+            <ImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="280dp"
+                android:layout_height="160dp"
+                android:src="@drawable/ic_launcher_background" />
+
+
+        </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:id="@+id/lang_icon"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginRight="6dp"
+            android:src="@drawable/ic_language"
+            app:layout_constraintBottom_toBottomOf="@+id/gamename"
+            app:layout_constraintRight_toLeftOf="@+id/lang"
+            app:layout_constraintTop_toTopOf="@+id/gamename"
+
+            />
 
         <TextView
             android:id="@+id/lang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="12dp"
+            android:layout_marginRight="8dp"
             android:textColor="@color/white"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/gamename"
+            app:layout_constraintBottom_toBottomOf="@id/gamename"
+            app:layout_constraintRight_toLeftOf="@+id/game_title_icon"
             app:layout_constraintTop_toTopOf="@+id/gamename" />
+
+        <ImageView
+            android:id="@+id/game_title_icon"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginRight="6dp"
+            android:src="@drawable/game_icon"
+            app:layout_constraintBottom_toBottomOf="@id/gamename"
+            app:layout_constraintRight_toLeftOf="@id/gamename"
+            app:layout_constraintTop_toTopOf="@id/gamename" />
 
         <TextView
             android:id="@+id/gamename"
@@ -113,8 +121,7 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:background="@color/purple_500"
         android:layout_marginTop="8dp"
-        />
+        android:background="@color/theme" />
 
 </LinearLayout>
