--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,180 +8,34 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:background="@color/theme" />
-
-    <HorizontalScrollView
-        android:id="@+id/menu_game"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="6dp">
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/game_icon"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="4dp"
-                android:src="@drawable/game_icon" />
-
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:cardCornerRadius="15dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                >
-
-                <ImageView
-                    android:id="@+id/pubg_mobile"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/pubg_mobile"
-                    />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:cardCornerRadius="15dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                >
-
-                <ImageView
-                    android:id="@+id/apex"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/apex"
-                    />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:cardCornerRadius="15dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                >
-
-                <ImageView
-                    android:id="@+id/amongus"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/among"
-                    />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:cardCornerRadius="15dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                >
-
-                <ImageView
-                    android:id="@+id/genshin"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/genshin"
-                    />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:cardCornerRadius="15dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                >
-
-                <ImageView
-                    android:id="@+id/minecraft"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/mine"
-                    />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:cardCornerRadius="15dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                >
-
-                <ImageView
-                    android:id="@+id/fortnight"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/fortnight"
-                    />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:cardCornerRadius="15dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                >
-
-                <ImageView
-                    android:id="@+id/callofduty"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/callofduty"
-                    />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:cardCornerRadius="15dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                >
-
-                <ImageView
-                    android:id="@+id/lol"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/lol"
-                    />
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-
-    </HorizontalScrollView>
+    <FrameLayout
+        android:id="@+id/fragment_conteiner"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
+        android:id="@+id/bottom_line"
         android:layout_width="fill_parent"
         android:layout_height="2dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/theme" />
+        android:layout_marginTop="6dp"
+        android:background="@color/theme"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        app:itemIconSize="28dp"
+        app:itemIconTint="@drawable/bottom_nav_item_color"
+        app:itemTextColor="@drawable/bottom_nav_item_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:menu="@menu/bottom_menu" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
