--- a/app/src/main/res/layout/fragment_stream.xml
+++ b/app/src/main/res/layout/fragment_stream.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.StreamFragment">
+    tools:context=".ui.fragment.StreamFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -178,10 +178,10 @@
             android:id="@+id/stream_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Live Stream"
-            android:textSize="30sp"
             android:layout_marginTop="8dp"
+            android:text="Live Stream"
             android:textColor="@color/white"
+            android:textSize="30sp"
             android:textStyle="italic"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -193,6 +193,20 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/stream_title" />
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            style="?attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/stream_title" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
