--- a/app/src/main/res/navigation/twitch_nav_graph.xml
+++ b/app/src/main/res/navigation/twitch_nav_graph.xml
@@ -7,14 +7,20 @@
 
     <fragment
         android:id="@+id/game"
-        android:name="com.example.twitchapp.ui.fragment.GameFragment"
+        android:name="com.example.twitchapp.ui.fragment.ClipFragment"
         android:label="fragment_game"
-        tools:layout="@layout/fragment_game" />
+        tools:layout="@layout/fragment_clip" />
 
     <fragment
         android:id="@+id/stream"
         android:name="com.example.twitchapp.ui.fragment.StreamFragment"
         android:label="fragment_stream"
         tools:layout="@layout/fragment_stream" />
+
+    <fragment
+        android:id="@+id/favorite"
+        android:name="com.example.twitchapp.ui.fragment.favoriteFragment"
+        android:label="fragment_favorite"
+        tools:layout="@layout/fragment_favorite" />
 
 </navigation>
