--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -8,8 +8,8 @@
 
     <item
         android:id="@+id/game"
-        android:icon="@drawable/ic_game"
-        android:title="Game"
+        android:icon="@drawable/ic_clip"
+        android:title="Clip"
         />
 
     <item
