--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -44,7 +44,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="12dp"
-            android:text="100"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/user_profile"
@@ -71,14 +70,14 @@
 
         </androidx.cardview.widget.CardView>
 
-        <ToggleButton
-            android:id="@+id/heart_icon"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/favo_button_state"
-            app:layout_constraintBottom_toBottomOf="@+id/gamename"
+        <ImageView
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:src="@drawable/ic_play"
+            app:layout_constraintBottom_toBottomOf="@+id/thumbnail_card"
             app:layout_constraintLeft_toLeftOf="@+id/thumbnail_card"
-            app:layout_constraintTop_toTopOf="@+id/gamename" />
+            app:layout_constraintRight_toRightOf="@+id/thumbnail_card"
+            app:layout_constraintTop_toTopOf="@+id/thumbnail_card" />
 
         <ImageView
             android:id="@+id/lang_icon"
@@ -88,7 +87,9 @@
             android:src="@drawable/ic_language"
             app:layout_constraintBottom_toBottomOf="@+id/gamename"
             app:layout_constraintRight_toLeftOf="@+id/lang"
-            app:layout_constraintTop_toTopOf="@+id/gamename" />
+            app:layout_constraintTop_toTopOf="@+id/gamename"
+
+            />
 
         <TextView
             android:id="@+id/lang"
