--- a/app/src/main/res/layout/fragment_stream.xml
+++ b/app/src/main/res/layout/fragment_stream.xml
@@ -205,8 +205,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/stream_title" />
-
+            app:layout_constraintTop_toBottomOf="@+id/stream_recycler_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
