--- a/app/src/main/res/navigation/twitch_nav_graph.xml
+++ b/app/src/main/res/navigation/twitch_nav_graph.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/favorite"
-        android:name="com.example.twitchapp.ui.fragment.favoriteFragment"
+        android:name="com.example.twitchapp.ui.fragment.FavoriteFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite" />
 
