--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -21,7 +21,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/stream_title"
+            android:id="@+id/favorite_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -38,7 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/stream_title" />
+            app:layout_constraintTop_toBottomOf="@+id/favorite_title"
+            />
 
         <ProgressBar
             android:id="@+id/progressbar"
@@ -51,7 +52,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/stream_recycler_view" />
+            app:layout_constraintTop_toBottomOf="@+id/favorite_recycler_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
