--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
 
         <fragment
             android:id="@+id/twichNavHostFragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:name="com.example.twitchapp.util.CustomNavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:defaultNavHost="true"
