--- a/app/src/main/res/layout/clip_item.xml
+++ b/app/src/main/res/layout/clip_item.xml
@@ -13,7 +13,7 @@
             android:id="@+id/user_profile"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +22,7 @@
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:textColor="@color/white"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="@id/user_profile"
@@ -33,7 +33,7 @@
             android:id="@+id/view_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/ic_eye"
             app:layout_constraintBottom_toBottomOf="@id/user_profile"
             app:layout_constraintRight_toLeftOf="@+id/viewer"
@@ -43,7 +43,7 @@
             android:id="@+id/viewer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="12dp"
+            android:layout_marginEnd="12dp"
             android:text="100"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -84,7 +84,7 @@
             android:id="@+id/lang_icon"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginRight="6dp"
+            android:layout_marginEnd="6dp"
             android:src="@drawable/ic_language"
             app:layout_constraintBottom_toBottomOf="@+id/gamename"
             app:layout_constraintRight_toLeftOf="@+id/lang"
@@ -94,7 +94,7 @@
             android:id="@+id/lang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/gamename"
@@ -105,7 +105,7 @@
             android:id="@+id/game_title_icon"
             android:layout_width="22dp"
             android:layout_height="22dp"
-            android:layout_marginRight="6dp"
+            android:layout_marginEnd="6dp"
             android:src="@drawable/game_icon"
             app:layout_constraintBottom_toBottomOf="@id/gamename"
             app:layout_constraintRight_toLeftOf="@id/gamename"
