--- a/app/src/main/res/layout/fragment_clip.xml
+++ b/app/src/main/res/layout/fragment_clip.xml
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toBottomOf="@+id/top_line">
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <ImageView
