--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -15,7 +15,7 @@
     <item
         android:id="@+id/favorite"
         android:icon="@drawable/ic_favorite"
-        android:title="Game"
+        android:title="Like"
         />
 
 </menu>
