fix layout files

--- a/app/src/main/res/layout/fragment_clip.xml
+++ b/app/src/main/res/layout/fragment_clip.xml
@@ -38,6 +38,7 @@
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="4dp"
+                    android:contentDescription="@string/image_desc"
                     android:src="@drawable/game_icon" />
 
                 <androidx.cardview.widget.CardView
@@ -52,6 +53,7 @@
                         android:id="@+id/pubg_mobile"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:contentDescription="@string/image_desc"
                         android:src="@drawable/pubg_mobile" />
                 </androidx.cardview.widget.CardView>
 
@@ -67,6 +69,7 @@
                         android:id="@+id/apex"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:contentDescription="@string/image_desc"
                         android:src="@drawable/apex" />
                 </androidx.cardview.widget.CardView>
 
@@ -82,6 +85,7 @@
                         android:id="@+id/amongus"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:contentDescription="@string/image_desc"
                         android:src="@drawable/among" />
                 </androidx.cardview.widget.CardView>
 
@@ -97,6 +101,7 @@
                         android:id="@+id/genshin"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:contentDescription="@string/image_desc"
                         android:src="@drawable/genshin" />
                 </androidx.cardview.widget.CardView>
 
@@ -112,6 +117,7 @@
                         android:id="@+id/minecraft"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:contentDescription="@string/image_desc"
                         android:src="@drawable/mine" />
                 </androidx.cardview.widget.CardView>
 
@@ -127,6 +133,7 @@
                         android:id="@+id/fortnite"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:contentDescription="@string/image_desc"
                         android:src="@drawable/fortnite" />
                 </androidx.cardview.widget.CardView>
 
@@ -142,6 +149,7 @@
                         android:id="@+id/callofduty"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:contentDescription="@string/image_desc"
                         android:src="@drawable/callofduty" />
                 </androidx.cardview.widget.CardView>
 
@@ -157,6 +165,7 @@
                         android:id="@+id/lol"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:contentDescription="@string/image_desc"
                         android:src="@drawable/lol" />
                 </androidx.cardview.widget.CardView>
 
@@ -192,8 +201,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/clip_title"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/clip_title" />
 
         <ProgressBar
             android:id="@+id/progressbar"
