--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/twitch_nav_graph"
-            />
+            app:navGraph="@navigation/twitch_nav_graph" />
 
     </FrameLayout>
 
