--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -8,35 +8,29 @@
     app:dragEdge="right"
     app:mode="same_level">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+    <FrameLayout
+        android:id="@+id/btn_delete"
+        android:layout_width="50dp"
+        android:layout_height="match_parent">
 
-        <FrameLayout
-            android:id="@+id/btn_delete"
-            android:layout_width="50dp"
-            android:layout_height="match_parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/holo_red_dark">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
-                android:background="@android:color/holo_red_dark">
+                android:contentDescription="@string/image_desc"
+                android:src="@drawable/ic_delete"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_delete"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </FrameLayout>
-
-    </LinearLayout>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,8 +45,9 @@
                 android:id="@+id/user_profile"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:contentDescription="@string/image_desc"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,7 +55,7 @@
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
                 android:textColor="@color/white"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="@id/user_profile"
@@ -71,7 +66,8 @@
                 android:id="@+id/view_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
+                android:contentDescription="@string/image_desc"
                 android:src="@drawable/ic_eye"
                 app:layout_constraintBottom_toBottomOf="@id/user_profile"
                 app:layout_constraintRight_toLeftOf="@+id/viewer"
@@ -81,7 +77,7 @@
                 android:id="@+id/viewer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="12dp"
+                android:layout_marginEnd="12dp"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@id/user_profile"
@@ -104,13 +100,15 @@
                 <ImageView
                     android:id="@+id/thumbnail"
                     android:layout_width="280dp"
-                    android:layout_height="160dp" />
+                    android:layout_height="160dp"
+                    android:contentDescription="@string/image_desc" />
 
             </androidx.cardview.widget.CardView>
 
             <ImageView
                 android:layout_width="45dp"
                 android:layout_height="45dp"
+                android:contentDescription="@string/image_desc"
                 android:src="@drawable/ic_play"
                 app:layout_constraintBottom_toBottomOf="@+id/thumbnail_card"
                 app:layout_constraintLeft_toLeftOf="@+id/thumbnail_card"
@@ -121,7 +119,8 @@
                 android:id="@+id/lang_icon"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:layout_marginRight="6dp"
+                android:layout_marginEnd="6dp"
+                android:contentDescription="@string/image_desc"
                 android:src="@drawable/ic_language"
                 app:layout_constraintBottom_toBottomOf="@+id/gamename"
                 app:layout_constraintRight_toLeftOf="@+id/lang"
@@ -133,7 +132,7 @@
                 android:id="@+id/lang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/gamename"
@@ -144,7 +143,8 @@
                 android:id="@+id/game_title_icon"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
-                android:layout_marginRight="6dp"
+                android:layout_marginEnd="6dp"
+                android:contentDescription="@string/image_desc"
                 android:src="@drawable/game_icon"
                 app:layout_constraintBottom_toBottomOf="@id/gamename"
                 app:layout_constraintRight_toLeftOf="@id/gamename"
