--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Favorite Clips"
+            android:text="@string/favorite_fragment_title"
             android:textColor="@color/white"
             android:textSize="30sp"
             android:textStyle="italic"
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="いいねはありません"
+            android:text="@string/nothing_favo"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:visibility="gone"
