--- a/app/src/main/res/layout/stream_item.xml
+++ b/app/src/main/res/layout/stream_item.xml
@@ -15,6 +15,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="@string/image_desc"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:contentDescription="@string/image_desc"
             android:src="@drawable/ic_eye"
             app:layout_constraintBottom_toBottomOf="@id/user_profile"
             app:layout_constraintRight_toLeftOf="@+id/viewer"
@@ -54,8 +56,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="280dp"
             android:layout_height="160dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             app:cardCornerRadius="5dp"
             app:layout_constraintBottom_toTopOf="@+id/gamename"
             app:layout_constraintLeft_toRightOf="@id/user_profile"
@@ -65,7 +67,8 @@
             <ImageView
                 android:id="@+id/thumbnail"
                 android:layout_width="280dp"
-                android:layout_height="160dp" />
+                android:layout_height="160dp"
+                android:contentDescription="@string/image_desc" />
 
 
         </androidx.cardview.widget.CardView>
@@ -75,6 +78,7 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginEnd="6dp"
+            android:contentDescription="@string/image_desc"
             android:src="@drawable/ic_language"
             app:layout_constraintBottom_toBottomOf="@+id/gamename"
             app:layout_constraintRight_toLeftOf="@+id/lang"
@@ -98,6 +102,7 @@
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_marginEnd="6dp"
+            android:contentDescription="@string/image_desc"
             android:src="@drawable/game_icon"
             app:layout_constraintBottom_toBottomOf="@id/gamename"
             app:layout_constraintRight_toLeftOf="@id/gamename"
@@ -110,8 +115,7 @@
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="@+id/viewer"
-            />
+            app:layout_constraintRight_toRightOf="@+id/viewer" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
