fix layout file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    android:orientation="vertical"
     tools:context=".ui.MainActivity">
 
     <FrameLayout
         android:id="@+id/fragment_conteiner"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_line"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,7 +20,7 @@
             android:id="@+id/twichNavHostFragment"
             android:name="com.example.twitchapp.util.CustomNavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:defaultNavHost="true"
             app:navGraph="@navigation/twitch_nav_graph" />
 
@@ -32,6 +31,7 @@
         android:layout_width="fill_parent"
         android:layout_height="2dp"
         android:background="@color/theme"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_conteiner"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -43,6 +43,7 @@
         app:itemIconSize="28dp"
         app:itemIconTint="@drawable/bottom_nav_item_color"
         app:itemTextColor="@drawable/bottom_nav_item_color"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_conteiner"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:menu="@menu/bottom_menu" />
