--- a/app/src/main/res/navigation/twitch_nav_graph.xml
+++ b/app/src/main/res/navigation/twitch_nav_graph.xml
@@ -6,16 +6,16 @@
     app:startDestination="@id/stream">
 
     <custom_fragment
-        android:id="@+id/game"
-        android:name="com.example.twitchapp.ui.fragments.ClipFragment"
-        android:label="fragment_game"
-        tools:layout="@layout/fragment_clip" />
-
-    <custom_fragment
         android:id="@+id/stream"
         android:name="com.example.twitchapp.ui.fragments.StreamFragment"
         android:label="fragment_stream"
         tools:layout="@layout/fragment_stream" />
+
+    <custom_fragment
+        android:id="@+id/clip"
+        android:name="com.example.twitchapp.ui.fragments.ClipFragment"
+        android:label="fragment_game"
+        tools:layout="@layout/fragment_clip" />
 
     <custom_fragment
         android:id="@+id/favorite"
