--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <View
-            android:id="@+id/midium_line"
+            android:id="@+id/top_line"
             android:layout_width="fill_parent"
             android:layout_height="2dp"
             android:layout_marginTop="6dp"
@@ -21,17 +21,95 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/profile_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/profile_title"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textStyle="italic"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/top_line" />
+
+        <ImageView
+            android:id="@+id/avatar_img"
+            android:layout_width="58dp"
+            android:layout_height="58dp"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@string/image_desc"
+            android:src="@drawable/avatar"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/my_name"
+            app:layout_constraintTop_toBottomOf="@+id/profile_title" />
+
+        <ImageView
+            android:id="@+id/edit_avater"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="8dp"
+            android:contentDescription="@string/image_desc"
+            android:src="@drawable/ic_change_avatar"
+            app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
+            app:layout_constraintRight_toRightOf="@+id/avatar_img" />
+
+        <TextView
+            android:id="@+id/my_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Yuuuki"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/num_likes"
+            app:layout_constraintLeft_toRightOf="@+id/avatar_img"
+            app:layout_constraintRight_toLeftOf="@+id/btn_edit"
+            app:layout_constraintTop_toTopOf="@+id/avatar_img" />
+
+        <TextView
+            android:id="@+id/num_likes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Likes 12"
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
+            app:layout_constraintLeft_toRightOf="@+id/avatar_img"
+            app:layout_constraintRight_toLeftOf="@+id/btn_edit"
+            app:layout_constraintTop_toBottomOf="@+id/my_name" />
+
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:text="edit"
+            android:id="@+id/btn_edit"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/avatar_img"
+            app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
+            app:layout_constraintLeft_toRightOf="@+id/my_name"
+            />
+
+        <View
+            android:id="@+id/medium_line"
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/theme"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avatar_img" />
+
+        <TextView
             android:id="@+id/favorite_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/favorite_fragment_title"
             android:textColor="@color/white"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="italic"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/midium_line" />
+            app:layout_constraintTop_toBottomOf="@+id/medium_line" />
 
         <TextView
             android:id="@+id/empty_mag"
@@ -51,8 +129,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/favorite_title"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/favorite_title" />
 
         <ProgressBar
             android:id="@+id/progressbar"
