--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/favorite"
-        android:icon="@drawable/ic_favorite"
-        android:title="@string/menu_favorite_title" />
+        android:icon="@drawable/ic_profile"
+        android:title="@string/menu_profile_title" />
 
 </menu>
